--- a/templates/index.html
+++ b/templates/index.html
@@ -17,34 +17,37 @@
         <a href="/spider" class="text-xl mr-0 ml-auto font-bold flex w-fit items-center hover:text-[#996600]">Spider</a>
     </div>
 
-    <div class="absolute z-5 w-full h-full flex items-center justify-center">
-        <form action="/search" method="get" class="flex shadow-lg rounded-full overflow-hidden h-[10%] w-[60%] text-3xl" onsubmit="return validateForm()">
-            <input
-                type="text"
-                name="query"
-                id="search-query"
-                placeholder="Enter your search query"
-                class="flex-grow px-16 py-4 focus:outline-none"
-                autocomplete="off"
-                autocorrect="off"
-                autocapitalize="off"
-                spellcheck="false">
-            <button
-                type="submit"
-                class="bg-[#003366] hover:bg-[#996600] text-white w-fit px-16 py-4 transition duration-200">
-                Search
-            </button>
-        </form>
+<div class="absolute z-5 w-full h-full flex items-center justify-center">
+<div class="relative w-[60%]">
+    <form action="/search" method="get" class="flex shadow-lg rounded-full overflow-hidden h-[10%] w-full text-3xl z-10" onsubmit="return validateForm()">
+        <input
+            type="text"
+            name="query"
+            id="search-query"
+            placeholder="Enter your search query"
+            class="flex-grow px-16 py-4 focus:outline-none"
+            autocomplete="off"
+            autocorrect="off"
+            autocapitalize="off"
+            spellcheck="false"
+            onfocus="showQueryHistory()">
+        <button
+            type="submit"
+            class="bg-[#003366] hover:bg-[#996600] text-white w-fit px-16 py-4 transition duration-200">
+            Search
+        </button>
+    </form>
+
+    <div id="query-history" class="absolute top-full left-0 right-0 bg-white shadow-lg rounded-lg mt-1 z-20 hidden w-full">
+        <div id="history-items" class="max-h-56 overflow-y-auto">
+        </div>
+        <div class="p-3 border-t border-gray-200 flex justify-end">
+            <button id="clear-history" class="text-sm text-red-600 hover:text-red-800">Clear History</button>
+        </div>
     </div>
+</div>
+</div>
 
 </body>
-<script>
-function validateForm() {
-    const query = document.getElementById('search-query').value.trim();
-    if (!query) {
-        return false;
-    }
-    return true;
-}
-</script>
+<script src="{{ url_for('static', filename='js/index.js') }}"></script>
 </html>
