--- a/templates/search.html
+++ b/templates/search.html
@@ -14,8 +14,8 @@
 
     <div class="top-0 left-0 w-full h-[15%] z-10 absolute flex py-3 px-[7%]">
         <a href="/" class="text-2xl font-bold flex w-fit items-center hover:text-[#996600]">COMP4321 Search Engine - Group 17</a>
-        <div class="w-[50%] mr-0 ml-auto flex items-center">
-            <form action="/search" method="get"  class="flex items-center w-full shadow-lg rounded-full overflow-hidden" onsubmit="return validateForm()">
+        <div class="w-[50%] mr-0 ml-auto flex items-center relative">
+            <form action="/search" method="get" class="flex items-center w-full shadow-lg rounded-full overflow-hidden" onsubmit="return validateForm()">
                 <input
                     type="text"
                     name="query"
@@ -26,13 +26,21 @@
                     autocomplete="off"
                     autocorrect="off"
                     autocapitalize="off"
-                    spellcheck="false">
+                    spellcheck="false"
+                    onfocus="showQueryHistory()">
                 <button
                     type="submit"
                     class="bg-[#003366] hover:bg-[#996600] text-white px-6 py-4 transition duration-200">
                     Search
                 </button>
             </form>
+            <div id="query-history" class="absolute top-full left-0 right-0 bg-white shadow-lg rounded-lg mt-1 z-20 hidden">
+                <div id="history-items" class="max-h-64 overflow-y-auto">
+                </div>
+                <div class="p-3 border-b border-gray-200 flex justify-end">
+                    <button id="clear-history" class="text-sm text-red-600 hover:text-red-800">Clear History</button>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -91,13 +99,5 @@
         </div>
     </div>
 </body>
-<script>
-function validateForm() {
-    const query = document.getElementById('search-query').value.trim();
-    if (!query) {
-        return false;
-    }
-    return true;
-}
-</script>
+<script src="{{ url_for('static', filename='js/index.js') }}"></script>
 </html>
